Mar 16 2003  2.9.1  Switched (returned) to statically allocated packet buffers
                     for a minor speed improvement.
Mar 13 2003  2.9.1  Removed redundant select() in several capture sources
                    Fixed drone capture source dropping dead under high loads
                    Fixed wtaplocaldump compile errors
                    Wrapped swap64 in ifndef for *BSD
                    Renamed swap64 and local *to*64 to avoid bsd collisions
Mar 10 2003  2.9.1  Tweaked wtaplocaldump endian headers
Mar 09 2003  2.9.1  Fixed stupidity in fuzzy mangling
                    Started new alert code framework
                    Fixed stupidity in wlan-ng 0.2.0 capture source
Mar 08 2003  2.9.1  Actually implemented max clients for server and drone
                    Only perform network protocol conversions if there are
                     clients connected to speed up headless servers.
                    Tweaked packet mangling for fifo pipe
                    Fixed client counting
                    Added log data packet mangling
                    Added tracking decrypt success/failure rate for WEP keys
Mar 07 2003  2.9.1  Added encoding, error, and rate transmission to drone 
                     protocol
                    Sanitized drone protocol for cross-endian use
                    Added kismet-local min/max functions
                    Fixed segfault with drone source
                    Added header length offset and version to drone packet 
                     header
                    Added packet source logging to gpsxml, updated DTD
Mar 06 2003  2.9.1  Added 802.11 FHSS/DSSS distinction
                    Added encoding and data rate tracking
                    Changed DTD versioning to match kismet version
                    Included old DTD's in cvs again
Mar 05 2003  2.9.1  Fixed prism2 dropping FCS (should fix wep decoding)
                    Added additional wlanctl-ng commands to initialize the card