@@ -1,6 +1,6 @@
 # Kismet drone config file
 
-version=2.9.1a
+version=2.9.1b
 
 # Name of server (Purely for organiational purposes)
 servername=Kismet
@@ -54,9 +54,4 @@ source=cisco,eth0,Kismet
 # Comma-separated list of sources to enable.  This is only needed if you wish 
 # to selectively enable multiple sources.
 # enablesources=prism,cisco
-
-# Do we stream beacon packets?
-beaconstream=true
-# Do we stream PHY-layer packets?
-phystream=true
 
