@@ -35,13 +35,6 @@ enablesources=prism
 .PP
 enablesources=prism,cisco
 .RE
-.PP
-"beaconstream" (true|false) Do we log beacon packets?  If beacon logging is turned off,
-one beacon per network will be logged.
-.PP
-"phystream" (true|false) Do we log PHY physical layer packets?  These can greatly increse
-the size of a logfile with little gain.  Not every packet source reports PHY
-packets.
 
 .SH CARD TYPES AND MULTIPLE CAPTURE SOURCES
 kismet_drone supports the same sources and options as the core Kismet server.  For
